just typed hello
fdgdfi

--- a/dsci_project.ipynb
+++ b/dsci_project.ipynb
@@ -24,7 +24,9 @@
    "id": "015676c7-e453-4cd0-b2e8-98dd0599578d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hello "
+   ]
   }
  ],
  "metadata": {
