--- a/dsci_project.ipynb
+++ b/dsci_project.ipynb
@@ -2,31 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "af63277e-fe0e-4587-b6c1-b138d5e91531",
+   "execution_count": 1,
+   "id": "2bd0bca7-9462-4817-897d-d69f9b6cdd71",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[1] \"hello world\"\n"
+      "Warning message in system(\"timedatectl\", intern = TRUE):\n",
+      "“running command 'timedatectl' had status 1”\n",
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.2 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.4.0      \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 1.0.0 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.8      \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.10\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.1      \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.5.0 \n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.3      \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.2 \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in library(tidymodels): there is no package called ‘tidymodels’\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in library(tidymodels): there is no package called ‘tidymodels’\nTraceback:\n",
+      "1. library(tidymodels)"
      ]
     }
    ],
    "source": [
-    "print(\"hello world\")"
+    "library(tidyverse)\n",
+    "library(repr)\n",
+    "library(tidymodels)\n",
+    "options(repr.matrix.max.rows = 6)\n",
+    "source('tests.R')\n",
+    "source('cleanup.R')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "015676c7-e453-4cd0-b2e8-98dd0599578d",
+   "id": "4a0d7fe5-0c60-43a0-8024-fefe6e600d86",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "hello "
-   ]
+   "source": []
   }
  ],
  "metadata": {
