why is jupyter stupid?
dsadasdjqwohdouhgsouadqw

--- a/dsci_project.ipynb
+++ b/dsci_project.ipynb
@@ -369,8 +369,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "16aa9d7d-4a3e-404a-823a-a5443074ca7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"why is jupyter stupid?\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"why is jupyter stupid?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f71b8b99-3da5-48cd-b005-2bd98f899b23",
    "metadata": {},
    "outputs": [],
    "source": []
