--- a/dsci_project.ipynb
+++ b/dsci_project.ipynb
@@ -44,217 +44,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "4a0d7fe5-0c60-43a0-8024-fefe6e600d86",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mRows: \u001b[22m\u001b[34m629\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m31\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
+      "\u001b[31mchr\u001b[39m  (4): Player, Pos, Tm, Player-additional\n",
+      "\u001b[32mdbl\u001b[39m (27): Rk, Age, G, GS, MP, FG, FGA, FG%, 3P, 3PA, 3P%, 2P, 2PA, 2P%, eFG%...\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "\n",
-       "<table style=\"width: 100%;\"><tr><td>iris {datasets}</td><td style=\"text-align: right;\">R Documentation</td></tr></table>\n",
-       "\n",
-       "<h2>Edgar Anderson's Iris Data</h2>\n",
-       "\n",
-       "<h3>Description</h3>\n",
-       "\n",
-       "<p>This famous (Fisher's or Anderson's) iris data set gives the\n",
-       "measurements in centimeters of the variables sepal length and width\n",
-       "and petal length and width, respectively, for 50 flowers from each\n",
-       "of 3 species of iris.  The species are <em>Iris setosa</em>,\n",
-       "<em>versicolor</em>, and <em>virginica</em>.\n",
-       "</p>\n",
-       "\n",
-       "\n",
-       "<h3>Usage</h3>\n",
-       "\n",
-       "<pre><code class='language-R'>iris\n",
-       "iris3\n",
-       "</code></pre>\n",
-       "\n",
-       "\n",
-       "<h3>Format</h3>\n",
-       "\n",
-       "<p><code>iris</code> is a data frame with 150 cases (rows) and 5 variables\n",
-       "(columns) named <code>Sepal.Length</code>, <code>Sepal.Width</code>,\n",
-       "<code>Petal.Length</code>, <code>Petal.Width</code>, and <code>Species</code>.\n",
-       "</p>\n",
-       "<p><code>iris3</code> gives the same data arranged as a 3-dimensional array\n",
-       "of size 50 by 4 by 3, as represented by S-PLUS.  The first dimension\n",
-       "gives the case number within the species subsample, the second the\n",
-       "measurements with names <code>Sepal L.</code>, <code>Sepal W.</code>,\n",
-       "<code>Petal L.</code>, and <code>Petal W.</code>, and the third the species.\n",
-       "</p>\n",
-       "\n",
-       "\n",
-       "<h3>Source</h3>\n",
-       "\n",
-       "<p>Fisher, R. A. (1936)\n",
-       "The use of multiple measurements in taxonomic problems.\n",
-       "<em>Annals of Eugenics</em>,\n",
-       "<b>7</b>, Part II, 179&ndash;188.\n",
-       "</p>\n",
-       "<p>The data were collected by\n",
-       "Anderson, Edgar (1935).\n",
-       "The irises of the Gaspe Peninsula,\n",
-       "<em>Bulletin of the American Iris Society</em>,\n",
-       "<b>59</b>, 2&ndash;5.\n",
-       "</p>\n",
-       "\n",
-       "\n",
-       "<h3>References</h3>\n",
-       "\n",
-       "<p>Becker, R. A., Chambers, J. M. and Wilks, A. R. (1988)\n",
-       "<em>The New S Language</em>.\n",
-       "Wadsworth &amp; Brooks/Cole. (has <code>iris3</code> as <code>iris</code>.)\n",
-       "</p>\n",
-       "\n",
-       "\n",
-       "<h3>See Also</h3>\n",
-       "\n",
-       "<p><code>matplot</code> some examples of which use\n",
-       "<code>iris</code>.\n",
-       "</p>\n",
-       "\n",
-       "\n",
-       "<h3>Examples</h3>\n",
-       "\n",
-       "<pre><code class='language-R'>dni3 &lt;- dimnames(iris3)\n",
-       "ii &lt;- data.frame(matrix(aperm(iris3, c(1,3,2)), ncol = 4,\n",
-       "                        dimnames = list(NULL, sub(\" L.\",\".Length\",\n",
-       "                                        sub(\" W.\",\".Width\", dni3[[2]])))),\n",
-       "    Species = gl(3, 50, labels = sub(\"S\", \"s\", sub(\"V\", \"v\", dni3[[3]]))))\n",
-       "all.equal(ii, iris) # TRUE\n",
-       "</code></pre>\n",
-       "\n",
-       "<hr /><div style=\"text-align: center;\">[Package <em>datasets</em> version 4.2.2 ]</div>\n",
-       "</div>"
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 6 × 31</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Rk</th><th scope=col>Player</th><th scope=col>Pos</th><th scope=col>Age</th><th scope=col>Tm</th><th scope=col>G</th><th scope=col>GS</th><th scope=col>MP</th><th scope=col>FG</th><th scope=col>FGA</th><th scope=col>⋯</th><th scope=col>ORB</th><th scope=col>DRB</th><th scope=col>TRB</th><th scope=col>AST</th><th scope=col>STL</th><th scope=col>BLK</th><th scope=col>TOV</th><th scope=col>PF</th><th scope=col>PTS</th><th scope=col>Player-additional</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>⋯</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>Precious Achiuwa        </td><td>C </td><td>23</td><td>TOR</td><td>39</td><td>11</td><td>23.0</td><td>3.8</td><td> 8.0</td><td>⋯</td><td>2.1</td><td>4.4</td><td> 6.5</td><td>1.0</td><td>0.6</td><td>0.6</td><td>1.2</td><td>2.1</td><td>10.1</td><td>achiupr01</td></tr>\n",
+       "\t<tr><td>2</td><td>Steven Adams            </td><td>C </td><td>29</td><td>MEM</td><td>42</td><td>42</td><td>27.0</td><td>3.7</td><td> 6.3</td><td>⋯</td><td>5.1</td><td>6.5</td><td>11.5</td><td>2.3</td><td>0.9</td><td>1.1</td><td>1.9</td><td>2.3</td><td> 8.6</td><td>adamsst01</td></tr>\n",
+       "\t<tr><td>3</td><td>Bam Adebayo             </td><td>C </td><td>25</td><td>MIA</td><td>58</td><td>58</td><td>34.9</td><td>8.4</td><td>15.6</td><td>⋯</td><td>2.6</td><td>7.2</td><td> 9.8</td><td>3.2</td><td>1.2</td><td>0.8</td><td>2.5</td><td>2.8</td><td>21.2</td><td>adebaba01</td></tr>\n",
+       "\t<tr><td>4</td><td>Ochai Agbaji            </td><td>SG</td><td>22</td><td>UTA</td><td>40</td><td> 3</td><td>15.7</td><td>1.9</td><td> 3.9</td><td>⋯</td><td>0.7</td><td>1.1</td><td> 1.8</td><td>0.6</td><td>0.2</td><td>0.2</td><td>0.4</td><td>1.4</td><td> 5.1</td><td>agbajoc01</td></tr>\n",
+       "\t<tr><td>5</td><td>Santi Aldama            </td><td>PF</td><td>22</td><td>MEM</td><td>58</td><td>18</td><td>21.9</td><td>3.3</td><td> 7.0</td><td>⋯</td><td>1.0</td><td>3.6</td><td> 4.6</td><td>1.2</td><td>0.7</td><td>0.7</td><td>0.7</td><td>1.9</td><td> 9.3</td><td>aldamsa01</td></tr>\n",
+       "\t<tr><td>6</td><td>Nickeil Alexander-Walker</td><td>SG</td><td>24</td><td>TOT</td><td>41</td><td> 3</td><td>14.6</td><td>2.3</td><td> 4.9</td><td>⋯</td><td>0.2</td><td>1.4</td><td> 1.7</td><td>2.0</td><td>0.6</td><td>0.4</td><td>1.2</td><td>1.5</td><td> 6.3</td><td>alexani01</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
       ],
       "text/latex": [
-       "\\inputencoding{utf8}\n",
-       "\\HeaderA{iris}{Edgar Anderson's Iris Data}{iris}\n",
-       "\\aliasA{iris3}{iris}{iris3}\n",
-       "\\keyword{datasets}{iris}\n",
-       "%\n",
-       "\\begin{Description}\\relax\n",
-       "This famous (Fisher's or Anderson's) iris data set gives the\n",
-       "measurements in centimeters of the variables sepal length and width\n",
-       "and petal length and width, respectively, for 50 flowers from each\n",
-       "of 3 species of iris.  The species are \\emph{Iris setosa},\n",
-       "\\emph{versicolor}, and \\emph{virginica}.\n",
-       "\\end{Description}\n",
-       "%\n",
-       "\\begin{Usage}\n",
-       "\\begin{verbatim}\n",
-       "iris\n",
-       "iris3\n",
-       "\\end{verbatim}\n",
-       "\\end{Usage}\n",
-       "%\n",
-       "\\begin{Format}\n",
-       "\\code{iris} is a data frame with 150 cases (rows) and 5 variables\n",
-       "(columns) named \\code{Sepal.Length}, \\code{Sepal.Width},\n",
-       "\\code{Petal.Length}, \\code{Petal.Width}, and \\code{Species}.\n",
+       "A tibble: 6 × 31\n",
+       "\\begin{tabular}{lllllllllllllllllllll}\n",
+       " Rk & Player & Pos & Age & Tm & G & GS & MP & FG & FGA & ⋯ & ORB & DRB & TRB & AST & STL & BLK & TOV & PF & PTS & Player-additional\\\\\n",
+       " <dbl> & <chr> & <chr> & <dbl> & <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & ⋯ & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 1 & Precious Achiuwa         & C  & 23 & TOR & 39 & 11 & 23.0 & 3.8 &  8.0 & ⋯ & 2.1 & 4.4 &  6.5 & 1.0 & 0.6 & 0.6 & 1.2 & 2.1 & 10.1 & achiupr01\\\\\n",
+       "\t 2 & Steven Adams             & C  & 29 & MEM & 42 & 42 & 27.0 & 3.7 &  6.3 & ⋯ & 5.1 & 6.5 & 11.5 & 2.3 & 0.9 & 1.1 & 1.9 & 2.3 &  8.6 & adamsst01\\\\\n",
+       "\t 3 & Bam Adebayo              & C  & 25 & MIA & 58 & 58 & 34.9 & 8.4 & 15.6 & ⋯ & 2.6 & 7.2 &  9.8 & 3.2 & 1.2 & 0.8 & 2.5 & 2.8 & 21.2 & adebaba01\\\\\n",
+       "\t 4 & Ochai Agbaji             & SG & 22 & UTA & 40 &  3 & 15.7 & 1.9 &  3.9 & ⋯ & 0.7 & 1.1 &  1.8 & 0.6 & 0.2 & 0.2 & 0.4 & 1.4 &  5.1 & agbajoc01\\\\\n",
+       "\t 5 & Santi Aldama             & PF & 22 & MEM & 58 & 18 & 21.9 & 3.3 &  7.0 & ⋯ & 1.0 & 3.6 &  4.6 & 1.2 & 0.7 & 0.7 & 0.7 & 1.9 &  9.3 & aldamsa01\\\\\n",
+       "\t 6 & Nickeil Alexander-Walker & SG & 24 & TOT & 41 &  3 & 14.6 & 2.3 &  4.9 & ⋯ & 0.2 & 1.4 &  1.7 & 2.0 & 0.6 & 0.4 & 1.2 & 1.5 &  6.3 & alexani01\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
        "\n",
-       "\\code{iris3} gives the same data arranged as a 3-dimensional array\n",
-       "of size 50 by 4 by 3, as represented by S-PLUS.  The first dimension\n",
-       "gives the case number within the species subsample, the second the\n",
-       "measurements with names \\code{Sepal L.}, \\code{Sepal W.},\n",
-       "\\code{Petal L.}, and \\code{Petal W.}, and the third the species.\n",
-       "\\end{Format}\n",
-       "%\n",
-       "\\begin{Source}\\relax\n",
-       "Fisher, R. A. (1936)\n",
-       "The use of multiple measurements in taxonomic problems.\n",
-       "\\emph{Annals of Eugenics},\n",
-       "\\bold{7}, Part II, 179--188.\n",
+       "A tibble: 6 × 31\n",
        "\n",
-       "The data were collected by\n",
-       "Anderson, Edgar (1935).\n",
-       "The irises of the Gaspe Peninsula,\n",
-       "\\emph{Bulletin of the American Iris Society},\n",
-       "\\bold{59}, 2--5.\n",
-       "\\end{Source}\n",
-       "%\n",
-       "\\begin{References}\\relax\n",
-       "Becker, R. A., Chambers, J. M. and Wilks, A. R. (1988)\n",
-       "\\emph{The New S Language}.\n",
-       "Wadsworth \\& Brooks/Cole. (has \\code{iris3} as \\code{iris}.)\n",
-       "\\end{References}\n",
-       "%\n",
-       "\\begin{SeeAlso}\\relax\n",
-       "\\code{\\LinkA{matplot}{matplot}} some examples of which use\n",
-       "\\code{iris}.\n",
-       "\\end{SeeAlso}\n",
-       "%\n",
-       "\\begin{Examples}\n",
-       "\\begin{ExampleCode}\n",
-       "dni3 <- dimnames(iris3)\n",
-       "ii <- data.frame(matrix(aperm(iris3, c(1,3,2)), ncol = 4,\n",
-       "                        dimnames = list(NULL, sub(\" L.\",\".Length\",\n",
-       "                                        sub(\" W.\",\".Width\", dni3[[2]])))),\n",
-       "    Species = gl(3, 50, labels = sub(\"S\", \"s\", sub(\"V\", \"v\", dni3[[3]]))))\n",
-       "all.equal(ii, iris) # TRUE\n",
-       "\\end{ExampleCode}\n",
-       "\\end{Examples}"
+       "| Rk &lt;dbl&gt; | Player &lt;chr&gt; | Pos &lt;chr&gt; | Age &lt;dbl&gt; | Tm &lt;chr&gt; | G &lt;dbl&gt; | GS &lt;dbl&gt; | MP &lt;dbl&gt; | FG &lt;dbl&gt; | FGA &lt;dbl&gt; | ⋯ ⋯ | ORB &lt;dbl&gt; | DRB &lt;dbl&gt; | TRB &lt;dbl&gt; | AST &lt;dbl&gt; | STL &lt;dbl&gt; | BLK &lt;dbl&gt; | TOV &lt;dbl&gt; | PF &lt;dbl&gt; | PTS &lt;dbl&gt; | Player-additional &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 1 | Precious Achiuwa         | C  | 23 | TOR | 39 | 11 | 23.0 | 3.8 |  8.0 | ⋯ | 2.1 | 4.4 |  6.5 | 1.0 | 0.6 | 0.6 | 1.2 | 2.1 | 10.1 | achiupr01 |\n",
+       "| 2 | Steven Adams             | C  | 29 | MEM | 42 | 42 | 27.0 | 3.7 |  6.3 | ⋯ | 5.1 | 6.5 | 11.5 | 2.3 | 0.9 | 1.1 | 1.9 | 2.3 |  8.6 | adamsst01 |\n",
+       "| 3 | Bam Adebayo              | C  | 25 | MIA | 58 | 58 | 34.9 | 8.4 | 15.6 | ⋯ | 2.6 | 7.2 |  9.8 | 3.2 | 1.2 | 0.8 | 2.5 | 2.8 | 21.2 | adebaba01 |\n",
+       "| 4 | Ochai Agbaji             | SG | 22 | UTA | 40 |  3 | 15.7 | 1.9 |  3.9 | ⋯ | 0.7 | 1.1 |  1.8 | 0.6 | 0.2 | 0.2 | 0.4 | 1.4 |  5.1 | agbajoc01 |\n",
+       "| 5 | Santi Aldama             | PF | 22 | MEM | 58 | 18 | 21.9 | 3.3 |  7.0 | ⋯ | 1.0 | 3.6 |  4.6 | 1.2 | 0.7 | 0.7 | 0.7 | 1.9 |  9.3 | aldamsa01 |\n",
+       "| 6 | Nickeil Alexander-Walker | SG | 24 | TOT | 41 |  3 | 14.6 | 2.3 |  4.9 | ⋯ | 0.2 | 1.4 |  1.7 | 2.0 | 0.6 | 0.4 | 1.2 | 1.5 |  6.3 | alexani01 |\n",
+       "\n"
       ],
       "text/plain": [
-       "iris                 package:datasets                  R Documentation\n",
-       "\n",
-       "_\bE_\bd_\bg_\ba_\br _\bA_\bn_\bd_\be_\br_\bs_\bo_\bn'_\bs _\bI_\br_\bi_\bs _\bD_\ba_\bt_\ba\n",
-       "\n",
-       "_\bD_\be_\bs_\bc_\br_\bi_\bp_\bt_\bi_\bo_\bn:\n",
-       "\n",
-       "     This famous (Fisher's or Anderson's) iris data set gives the\n",
-       "     measurements in centimeters of the variables sepal length and\n",
-       "     width and petal length and width, respectively, for 50 flowers\n",
-       "     from each of 3 species of iris.  The species are _Iris setosa_,\n",
-       "     _versicolor_, and _virginica_.\n",
-       "\n",
-       "_\bU_\bs_\ba_\bg_\be:\n",
-       "\n",
-       "     iris\n",
-       "     iris3\n",
-       "     \n",
-       "_\bF_\bo_\br_\bm_\ba_\bt:\n",
-       "\n",
-       "     ‘iris’ is a data frame with 150 cases (rows) and 5 variables\n",
-       "     (columns) named ‘Sepal.Length’, ‘Sepal.Width’, ‘Petal.Length’,\n",
-       "     ‘Petal.Width’, and ‘Species’.\n",
-       "\n",
-       "     ‘iris3’ gives the same data arranged as a 3-dimensional array of\n",
-       "     size 50 by 4 by 3, as represented by S-PLUS.  The first dimension\n",
-       "     gives the case number within the species subsample, the second the\n",
-       "     measurements with names ‘Sepal L.’, ‘Sepal W.’, ‘Petal L.’, and\n",
-       "     ‘Petal W.’, and the third the species.\n",
-       "\n",
-       "_\bS_\bo_\bu_\br_\bc_\be:\n",
-       "\n",
-       "     Fisher, R. A. (1936) The use of multiple measurements in taxonomic\n",
-       "     problems.  _Annals of Eugenics_, *7*, Part II, 179-188.\n",
-       "\n",
-       "     The data were collected by Anderson, Edgar (1935).  The irises of\n",
-       "     the Gaspe Peninsula, _Bulletin of the American Iris Society_,\n",
-       "     *59*, 2-5.\n",
-       "\n",
-       "_\bR_\be_\bf_\be_\br_\be_\bn_\bc_\be_\bs:\n",
-       "\n",
-       "     Becker, R. A., Chambers, J. M. and Wilks, A. R. (1988) _The New S\n",
-       "     Language_.  Wadsworth & Brooks/Cole. (has ‘iris3’ as ‘iris’.)\n",
-       "\n",
-       "_\bS_\be_\be _\bA_\bl_\bs_\bo:\n",
-       "\n",
-       "     ‘matplot’ some examples of which use ‘iris’.\n",
-       "\n",
-       "_\bE_\bx_\ba_\bm_\bp_\bl_\be_\bs:\n",
-       "\n",
-       "     dni3 <- dimnames(iris3)\n",
-       "     ii <- data.frame(matrix(aperm(iris3, c(1,3,2)), ncol = 4,\n",
-       "                             dimnames = list(NULL, sub(\" L.\",\".Length\",\n",
-       "                                             sub(\" W.\",\".Width\", dni3[[2]])))),\n",
-       "         Species = gl(3, 50, labels = sub(\"S\", \"s\", sub(\"V\", \"v\", dni3[[3]]))))\n",
-       "     all.equal(ii, iris) # TRUE\n",
-       "     "
+       "  Rk Player                   Pos Age Tm  G  GS MP   FG  FGA  ⋯ ORB DRB TRB \n",
+       "1 1  Precious Achiuwa         C   23  TOR 39 11 23.0 3.8  8.0 ⋯ 2.1 4.4  6.5\n",
+       "2 2  Steven Adams             C   29  MEM 42 42 27.0 3.7  6.3 ⋯ 5.1 6.5 11.5\n",
+       "3 3  Bam Adebayo              C   25  MIA 58 58 34.9 8.4 15.6 ⋯ 2.6 7.2  9.8\n",
+       "4 4  Ochai Agbaji             SG  22  UTA 40  3 15.7 1.9  3.9 ⋯ 0.7 1.1  1.8\n",
+       "5 5  Santi Aldama             PF  22  MEM 58 18 21.9 3.3  7.0 ⋯ 1.0 3.6  4.6\n",
+       "6 6  Nickeil Alexander-Walker SG  24  TOT 41  3 14.6 2.3  4.9 ⋯ 0.2 1.4  1.7\n",
+       "  AST STL BLK TOV PF  PTS  Player-additional\n",
+       "1 1.0 0.6 0.6 1.2 2.1 10.1 achiupr01        \n",
+       "2 2.3 0.9 1.1 1.9 2.3  8.6 adamsst01        \n",
+       "3 3.2 1.2 0.8 2.5 2.8 21.2 adebaba01        \n",
+       "4 0.6 0.2 0.2 0.4 1.4  5.1 agbajoc01        \n",
+       "5 1.2 0.7 0.7 0.7 1.9  9.3 aldamsa01        \n",
+       "6 2.0 0.6 0.4 1.2 1.5  6.3 alexani01        "
       ]
      },
      "metadata": {},
@@ -262,7 +131,8 @@
     }
    ],
    "source": [
-    "?iris"
+    "data <- read_csv(\"nba_data.csv\")\n",
+    "head(data)"
    ]
   },
   {
