--- a/dsci_project.ipynb
+++ b/dsci_project.ipynb
@@ -22,7 +22,9 @@
    "id": "4a0d7fe5-0c60-43a0-8024-fefe6e600d86",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "read_csv <- ()"
+   ]
   },
   {
    "cell_type": "code",
