read the data table from the web

--- a/dsci_project.ipynb
+++ b/dsci_project.ipynb
@@ -2,15 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2bd0bca7-9462-4817-897d-d69f9b6cdd71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.0.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.1     \n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\u001b[34m•\u001b[39m Use \u001b[32mtidymodels_prefer()\u001b[39m to resolve common conflicts.\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘rvest’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:readr’:\n",
+      "\n",
+      "    guess_encoding\n",
+      "\n",
+      "\n",
+      "Warning message in file(filename, \"r\", encoding = encoding):\n",
+      "“cannot open file 'tests.R': No such file or directory”\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in file(filename, \"r\", encoding = encoding): cannot open the connection\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in file(filename, \"r\", encoding = encoding): cannot open the connection\nTraceback:\n",
+      "1. source(\"tests.R\")",
+      "2. file(filename, \"r\", encoding = encoding)"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(repr)\n",
     "library(tidymodels)\n",
     "library(datasets)\n",
+    "library(rvest)\n",
     "options(repr.matrix.max.rows = 6)\n",
     "source('tests.R')\n",
     "source('cleanup.R')"
@@ -18,21 +76,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4a0d7fe5-0c60-43a0-8024-fefe6e600d86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_csv <- ()"
+    "# URL of the team statistics page for the 2021-2022 NBA season\n",
+    "url <- \"https://www.basketball-reference.com/leagues/NBA_2023_per_game.html\"\n",
+    "\n",
+    "# Load the HTML content from the URL\n",
+    "page <- read_html(url)\n",
+    "\n",
+    "table <- html_table(html_nodes(page, \"table\")[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8a17407c-0549-4d41-89d7-c9d20a424f01",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]]\n",
+      "\u001b[90m# A tibble: 654 × 30\u001b[39m\n",
+      "   Rk    Player      Pos   Age   Tm    G     GS    MP    FG    FGA   `FG%` `3P` \n",
+      "   \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m       \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m\n",
+      "\u001b[90m 1\u001b[39m 1     Precious A… C     23    TOR   39    11    23.0  3.8   8.0   .479  0.5  \n",
+      "\u001b[90m 2\u001b[39m 2     Steven Ada… C     29    MEM   42    42    27.0  3.7   6.3   .597  0.0  \n",
+      "\u001b[90m 3\u001b[39m 3     Bam Adebayo C     25    MIA   58    58    34.9  8.4   15.6  .538  0.0  \n",
+      "\u001b[90m 4\u001b[39m 4     Ochai Agba… SG    22    UTA   40    3     15.7  1.9   3.9   .478  1.0  \n",
+      "\u001b[90m 5\u001b[39m 5     Santi Alda… PF    22    MEM   58    18    21.9  3.3   7.0   .477  1.3  \n",
+      "\u001b[90m 6\u001b[39m 6     Nickeil Al… SG    24    TOT   41    3     14.6  2.3   4.9   .477  1.0  \n",
+      "\u001b[90m 7\u001b[39m 6     Nickeil Al… SG    24    UTA   36    3     14.7  2.3   4.7   .488  1.0  \n",
+      "\u001b[90m 8\u001b[39m 6     Nickeil Al… SG    24    MIN   5     0     13.8  2.4   5.8   .414  1.2  \n",
+      "\u001b[90m 9\u001b[39m 7     Grayson Al… SG    27    MIL   58    56    27.6  3.4   7.7   .442  2.0  \n",
+      "\u001b[90m10\u001b[39m 8     Jarrett Al… C     24    CLE   58    58    33.3  6.1   9.4   .652  0.0  \n",
+      "\u001b[90m# … with 644 more rows, and 18 more variables: `3PA` <chr>, `3P%` <chr>,\u001b[39m\n",
+      "\u001b[90m#   `2P` <chr>, `2PA` <chr>, `2P%` <chr>, `eFG%` <chr>, FT <chr>, FTA <chr>,\u001b[39m\n",
+      "\u001b[90m#   `FT%` <chr>, ORB <chr>, DRB <chr>, TRB <chr>, AST <chr>, STL <chr>,\u001b[39m\n",
+      "\u001b[90m#   BLK <chr>, TOV <chr>, PF <chr>, PTS <chr>\u001b[39m\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(table)"
+   ]
   },
   {
    "cell_type": "code",
